# donkey-kong-jr

./: .gitignore  CMakeLists.txt  README.md  execute.ps1  launcher.ps1  vcpkg.json
KongJrServer/: build.gradle.kts  settings.gradle.kts
KongJrServer/gradle/wrapper/: gradle-wrapper.properties
KongJrServer/src/main/java/org/kongjr/: Main.java
assets/maps/: map1.txt
docs/: KongJr.txt
include/: client.h  game_map.h  globals.h  player.h  utils.h
server/: build.gradle.kts
server/gradle/wrapper/: gradle-wrapper.properties
server/src/main/java/org/kongjr/: Liana.java  Main.java  Player.java
server/src/main/java/org/kongjr/crocodiles/: BlueCrocodile.java  Crocodile.java  CrocodileClient.java  CrocodileFactory.java  RedCrocodile.java  RedCrocodileFactory.java
server/src/main/java/org/kongjr/datastructures/: Matriz.java  MyArrayList.java  MyLinkedList.java  Node.java  ParOrdenado.java
server/src/main/java/org/kongjr/estructuras/: Matriz.java  MyArrayList.java  MyLinkedList.java  Node.java  ParOrdenado.java
server/src/main/java/org/kongjr/fruits/: Apple.java  Banana.java  Fruit.java  Watermelon.java
server/src/main/java/org/kongjr/interfaz/: Interfaz.java
server/src/main/java/org/kongjr/lista/: MyLinkedList.java  Node.java
server/src/main/java/org/kongjr/server/: Server.java
server/src/main/java/org/kongjr/ui/: Interfaz.java
src/: client.c  client.h  game_map.c  main.c  player.c
